# factorkey

./: .gitmodules  .travis.yml  CMakeLists.txt  FactorKeyConfig.cmake.in  README.md
autotests/: CMakeLists.txt
autotests/lib/: CMakeLists.txt  googlemock.h  trompeloeil.cpp  trompeloeil.h
autotests/mock/: CMakeLists.txt
autotests/mock/db/: CMakeLists.txt  dummy-metadatastoragehandler.cpp  dummy-metadatastoragehandler.h  dummy-metadb.cpp  dummy-metadb.h  memory-metadb.cpp  memory-metadb.h  metadatastoragehandler.cpp  metadatastoragehandler.h  metadb.cpp  metadb.h
autotests/mock/secrets/: CMakeLists.txt  secrets.cpp  secrets.h
autotests/mock/storage/: CMakeLists.txt  storage.cpp  storage.h  storageprovider.cpp  storageprovider.h
autotests/otp/: CMakeLists.txt  base32-byte-coding.cpp  base32-coding-decoding.cpp  base32-encoding-compat.cpp  default-encoder-samples.cpp  hotp-int-value.cpp  rfc4226-hotp-compat.cpp  sailotp-hotp-compat.cpp  totp-counter.cpp
autotests/otp/base32/: CMakeLists.txt  base32-byte-coding.cpp  base32-coding-decoding.cpp  base32-encoding-compat.cpp
autotests/otp/db/: CMakeLists.txt  commit-metadata.cpp  convert-metadata.cpp  metadatastoragehandler-sanity.cpp  metadatastoragehandler-sanity.h  metadatastoragehandler.cpp  metadatastoragehandler.h  metadb-convert-metadata.cpp  metadb-create-metadata.cpp  metadb-poll-metadata.cpp  metadb-schema.cpp  metadb-write-metadata.cpp  metadb.cpp  metadb.h  poll-metadata.cpp  write-metadata.cpp
autotests/otp/dummy/: CMakeLists.txt  dummy-metadatastoragehandler-sanity.cpp
autotests/otp/generator/: CMakeLists.txt
autotests/otp/generator/internal/: CMakeLists.txt  locale-rt.cpp
autotests/otp/oath/: CMakeLists.txt  default-encoder-samples.cpp  hotp-generator-samples.cpp  hotp-int-value.cpp  hotp-metadatastoragehandler-sanity.cpp  rfc4226-hotp-compat.cpp  totp-counter.cpp  totp-generator-samples.cpp  totp-metadatastoragehandler-sanity.cpp
autotests/otp/skey/: CMakeLists.txt  skey-default-words-rt.cpp  skey-format-challenge.cpp  skey-generator-samples.cpp  skey-metadatastoragehandler-sanity.cpp  skey-parse-challenge.cpp  skey-rfc2289-compat.cpp  skey-rfc2289-words-compat.cpp  skey-token-value.cpp  skey-validate-default-dict.cpp  skey-validate-seed.cpp
autotests/otp/steam/: CMakeLists.txt  steam-metadatastoragehandler-sanity.cpp
autotests/otp/storage/: CMakeLists.txt  storage.cpp  storage.h
autotests/otp/util/: CMakeLists.txt  locale-rt.cpp
autotests/util/: CMakeLists.txt
autotests/util/db/: CMakeLists.txt  memory-metadata-test-utils.cpp  memory-metadata-test-utils.h  metadata-test-utils.cpp  metadata-test-utils.h  metadatastoragehandler-sanity.cpp  metadatastoragehandler-sanity.h
cmake/: SetTargetObjectVars.cmake
docker/: .dockerignore  build-env-base.docker  clang-6.0_libkf5wallet-dev.docker  clang-6.0_qt5keychain-dev.docker  clang-6.0_qt5keychain-dev_libkf5wallet-dev.docker  entrypoint.sh  g++-7_libkf5wallet-dev.docker  g++-7_qt5keychain-dev.docker  g++-7_qt5keychain-dev_libkf5wallet-dev.docker  gen-docker-build-env.sh  travis-ci.sh
samples/: CMakeLists.txt  create-token-sample.cpp  generate-totp-token.cpp  lookup-token-sample.cpp  shared-cli-options.cpp  shared-cli-options.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli.cpp  cli.h  config.in.h  debugger.cpp  debugger.h  storageprovider.cpp  storageprovider.h
src/keychain/: CMakeLists.txt  secrets.cpp  secrets.h
src/otp/: CMakeLists.txt  base32.cpp  base32.h  generator.cpp  generator.h  generator_p.cpp  generator_p.h  otp.cpp  otp.h  parameters.cpp  parameters.h  storage.cpp  storage.h  storage_p.cpp  storage_p.h  storageprovider.cpp  storageprovider.h  token.cpp  token.h
src/otp/base32/: CMakeLists.txt  base32.cpp
src/otp/db/: CMakeLists.txt  metadata.cpp  metadata.h  metadatastoragehandler.cpp  metadatastoragehandler.h  metadb.cpp  metadb.h  secrets.cpp  secrets.h  storageprovider.cpp  storageprovider.h  storageprovider_p.cpp  storageprovider_p.h
src/otp/dummy/: CMakeLists.txt  dummy.cpp  dummy.h  generator.cpp  generator.h  metadatastoragehandler.cpp  metadatastoragehandler.h  parameters.cpp  parameters.h
src/otp/oath/: CMakeLists.txt  generator.cpp  generator.h  metadatastoragehandler.cpp  metadatastoragehandler.h  oath.cpp  oath.h  parameters.cpp  parameters.h  token.cpp  token.h
src/otp/secrets/: CMakeLists.txt  secrets.cpp  secrets.h
src/otp/skey/: CMakeLists.txt  generator.cpp  generator.h  metadatastoragehandler.cpp  metadatastoragehandler.h  parameters.cpp  parameters.h  skey.cpp  skey.h  token.cpp  token.h  words.cpp  words.h
src/otp/steam/: CMakeLists.txt  generator.cpp  generator.h  metadatastoragehandler.cpp  metadatastoragehandler.h  parameters.cpp  parameters.h  steam.cpp  steam.h
src/otp/storage/: CMakeLists.txt  storage.cpp  storage.h  storage_p.cpp  storage_p.h  storageprovider.cpp  storageprovider.h  util.cpp  util.h
src/otp/token/: CMakeLists.txt  token.cpp  token.h
src/otp/util/: CMakeLists.txt  localeconversion.cpp  localeconversion.h
src/otp/wallet/: secrets.h
src/qml/: CMakeLists.txt
src/wallet/: CMakeLists.txt  secrets.cpp  secrets.h
